fix: sending menu item to AppOwner and accepted it

--- a/2-Client/TalabatReplica/src/app/Components/accept-refuse-menu-item/accept-refuse-menu-item.component.html
+++ b/2-Client/TalabatReplica/src/app/Components/accept-refuse-menu-item/accept-refuse-menu-item.component.html
@@ -8,7 +8,7 @@
               <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Edit Menu Item
+                  Accept Menu Item
                   </button>
                 </h5>
               </div>
@@ -165,7 +165,7 @@ readonly
 
 
                     <div class="modal-footer">
-                        <input type="submit" (click)="updateItem(itemID.value,name.value,+price.value,description.value,size.value,isTopItem.value,+resturantID.value,offer.value,+categoryID.value,true)"  class="btn btn-info" value="Accept">
+                        <input type="submit" (click)="updateItem(itemID.value,name.value,+price.value,description.value,size.value,isTopItem.checked,+resturantID.value,offer.checked,+categoryID.value,true)"  class="btn btn-info" value="Accept">
                       </div>
                 </div>
                 </div>
