--- a/2-Client/TalabatReplica/src/app/Components/admin-dashbord-menue/admin-dashbord-menue.component.html
+++ b/2-Client/TalabatReplica/src/app/Components/admin-dashbord-menue/admin-dashbord-menue.component.html
@@ -836,7 +836,7 @@
 
 
 
-                <button  (click)="Additem(name.value,+price.value,desc.value,size.value,IsTop.value,+ResID.value,Offer.value,+catigorys.value)"
+                <button  (click)="Additem(name.value,+price.value,desc.value,size.value,IsTop.checked,+ResID.value,Offer.checked,+catigorys.value)"
                 class="flex items-center justify-between
                  px-4 py-2 text-sm font-medium leading-5
                  text-white transition-colors duration-150 bg-purple-600
