--- a/2-Client/TalabatReplica/src/app/Components/res-admin-update/res-admin-update.component.html
+++ b/2-Client/TalabatReplica/src/app/Components/res-admin-update/res-admin-update.component.html
@@ -8,7 +8,7 @@
               <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Edit Menu Item
+                  Resturant Admin Requests
                   </button>
                 </h5>
               </div>
@@ -36,7 +36,7 @@
 
                 <label class="block text-sm">
                   <span class="text-gray-700 dark:text-gray-400">First Name</span>
-                  <input 
+                  <input
                   readonly
                   #price value="{{itemdetails.firstName}}"
                   formControlName="firstName"
