--- a/2-Client/TalabatReplica/src/app/Components/updatemenu/updatemenu.component.html
+++ b/2-Client/TalabatReplica/src/app/Components/updatemenu/updatemenu.component.html
@@ -135,7 +135,7 @@
 
                     <div class="modal-footer">
                         <input type="button"  class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit"  (click)="updateItem(itemid.value,name.value,+price.value,description.value,size.value,IsTop.value,+ResID.value,Offer.value,+catigorys.value)" class="btn btn-info" value="Save">
+                        <input type="submit"  (click)="updateItem(itemid.value,name.value,+price.value,description.value,size.value,IsTop.checked,+ResID.value,Offer.checked,+catigorys.value)" class="btn btn-info" value="Save">
                       </div>
                 </div>
                 </div>
