--- a/2-Client/TalabatReplica/src/app/Components/accept-restaurant/accept-restaurant.component.html
+++ b/2-Client/TalabatReplica/src/app/Components/accept-restaurant/accept-restaurant.component.html
@@ -15,13 +15,13 @@
                 aria-expanded="false"
                 aria-controls="collapseThree2"
               >
-                Edit Resturant profile
+                Accept Resturant profile
               </button>
             </h5>
           </div>
           <div
             id="collapseThree2"
-            class="collapse"
+            class="collapse show"
             aria-labelledby="headingThree2"
             data-parent="#accordionExample2"
           >
@@ -41,8 +41,8 @@
                   placeholder="Restaurant name"
                 />
               </label>
-              
-             
+
+
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400"
                   >Email Address</span
@@ -57,7 +57,7 @@
                   placeholder="Restaurant Emailaddress"
                 />
               </label>
-              
+
 
                <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400"
@@ -73,7 +73,7 @@
                   placeholder="Restaurant phone number"
                 />
               </label>
-             
+
 
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400"
@@ -89,7 +89,7 @@
                   placeholder="Restaurant location"
                 />
               </label>
-              
+
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400"
                   >discription</span
@@ -104,26 +104,26 @@
                   placeholder="Enter some long form content."
                 ></textarea>
               </label>
-             
+
 
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400"
                   >profile photo</span
                 >
-                
+
                 <img #imageposter src="data:image/jpg;base64 , {{ResData.poster}}" >
-                
+
               </label>
-              
-            
+
+
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400"
                   >paner photo</span
                 >
-                 
+
                 <img #imagepanner src="data:image/jpg;base64 , {{ResData.coverBanner}}" >
               </label>
-              
+
             <div class="modal-footer">
                 <input type="submit" (click)="updateRes(location.value,name.value,desc.value,emailadd.value,phonee.value,true)"  class="btn btn-info" value="Accept">
               </div>
